--- a/indexcards-ui/src/app/component/projects/project/project.component.css
+++ b/indexcards-ui/src/app/component/projects/project/project.component.css
@@ -7,6 +7,7 @@
 .indexcard-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
 }
 
 @media (max-width: 480px) {
@@ -21,7 +22,7 @@
 }
 
 .indexcard {
-  background: var(--deepPurple300);
+  background: var(--secondary-background-color);
   margin: 10px;
   padding: 5px;
   border-radius: 10px;
@@ -32,6 +33,10 @@
   -webkit-box-orient: vertical;
   text-align: left;
   overflow-wrap: break-word;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .header-icon {
