--- a/indexcards-ui/src/app/component/projects/project/project.component.html
+++ b/indexcards-ui/src/app/component/projects/project/project.component.html
@@ -7,20 +7,30 @@
       <p-button
         *ngIf="canStartQuiz()"
         (click)="onClickQuizButton()"
-      >
-        {{ 'indexcard.spaced_repetition' | translate }}
-      </p-button>
-      <i class="pi pi-plus header-icon" pTooltip="{{ 'indexcard.create_tooltip' | translate }}"
-         (click)="onClickCreateIndexcardButton()"></i>
+        icon="pi pi-play"
+        iconPos="left"
+        label="{{ 'indexcard.spaced_repetition' | translate }}"
+        class="mr15"
+      />
+      <p-button [styleClass]="'p-button p-button-icon-only p-button-rounded'" icon="pi pi-plus"
+                pTooltip="{{ 'indexcard.create_tooltip' | translate }}"
+                (click)="onClickCreateIndexcardButton()"></p-button>
     </div>
   </div>
   <div class="indexcard-container">
     <div class="indexcard {{ indexcard.assessment.toString() | lowercase }}"
          *ngFor="let indexcard of userProject?.indexCardResponses">
-      <i class="pi pi-trash trash icon" (click)="deleteIndexCard(indexcard.indexCardId)"></i>
-      <p-scrollPanel [style]="{width: '100%', height: '20vh'}">
-        <div class="text ql-editor" [innerHTML]="indexcard.question"></div>
-      </p-scrollPanel>
+
+      <div style="width: calc(100% - 75px)">
+        <p-scrollPanel [style]="{width: '100%', height: '20vh'}">
+          <div class="text" [innerHTML]="indexcard.question"></div>
+        </p-scrollPanel>
+      </div>
+
+      <div style="width: 48px">
+        <p-button class="icon" [styleClass]="'p-button p-button-icon-only p-button-rounded icon'" icon="pi pi-trash"
+                  (click)="deleteIndexCard(indexcard.indexCardId)"></p-button>
+      </div>
     </div>
   </div>
 </div>
