--- a/indexcards-ui/src/app/component/projects/project/project.component.css
+++ b/indexcards-ui/src/app/component/projects/project/project.component.css
@@ -35,6 +35,7 @@
   overflow-wrap: break-word;
   display: flex;
   flex-direction: row;
+  gap: 5px;
   width: 100%;
   justify-content: space-between;
 }
@@ -70,7 +71,6 @@
   font-size: 1.5em;
   transition: filter 0.25s;
   float: right;
-  margin-top: 10px;
 }
 
 .icon:hover {
@@ -88,4 +88,13 @@ p {
 
 ol {
   margin: 0;
+}
+
+.edit-buttons {
+  width: 111px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 48px;
+  margin-top: 10px;
 }
