--- a/indexcards-ui/src/app/component/projects/project/project.component.html
+++ b/indexcards-ui/src/app/component/projects/project/project.component.html
@@ -5,11 +5,11 @@
     </h1>
     <div class="header-icon-container">
       <p-button
+        [styleClass]="'p-button p-button-icon-only p-button-rounded'"
         *ngIf="canStartQuiz()"
         (click)="onClickQuizButton()"
         icon="pi pi-play"
-        iconPos="left"
-        label="{{ 'indexcard.spaced_repetition' | translate }}"
+        pTooltip="{{ 'indexcard.spaced_repetition' | translate }}"
         class="mr15"
       />
       <p-button [styleClass]="'p-button p-button-icon-only p-button-rounded'" icon="pi pi-plus"
