--- a/indexcards-ui/src/app/component/projects/project/project.component.html
+++ b/indexcards-ui/src/app/component/projects/project/project.component.html
@@ -4,6 +4,12 @@
       {{ userProject?.name }}
     </h1>
     <div class="header-icon-container">
+      <input type="file" class="file-input"
+             (change)="onClickImportCsv($event)" #fileUpload/>
+      <p-button [styleClass]="'p-button p-button-icon-only p-button-rounded'" icon="pi pi-upload"
+                pTooltip="{{ 'indexcard.create_tooltip' | translate }}"
+                class="mr15"
+                (click)="fileUpload.click()"/>
       <p-button
         [styleClass]="'p-button p-button-icon-only p-button-rounded'"
         *ngIf="canStartQuiz()"
@@ -14,7 +20,7 @@
       />
       <p-button [styleClass]="'p-button p-button-icon-only p-button-rounded'" icon="pi pi-plus"
                 pTooltip="{{ 'indexcard.create_tooltip' | translate }}"
-                (click)="onClickCreateIndexcardButton()"></p-button>
+                (click)="onClickCreateIndexcardButton()"/>
     </div>
   </div>
   <div class="indexcard-container">
@@ -23,7 +29,7 @@
 
       <div>
         <p-scrollPanel [style]="{width: '100%', height: '20vh'}">
-          <div class="text" [innerHTML]="indexcard.question"></div>
+          <div class="text" [innerHTML]="indexcard.question" appMathjax></div>
         </p-scrollPanel>
       </div>
 
