--- a/indexcards-ui/src/app/pages/auth/login/login.html
+++ b/indexcards-ui/src/app/pages/auth/login/login.html
@@ -1,25 +1,28 @@
 <form [formGroup]="loginFormGroup" (ngSubmit)="makeLogin()">
-  <div class="container">
-    <mat-form-field class="full-width">
-      <mat-label>{{ 'auth.username' | translate }}</mat-label>
-      <input matInput id="username" formControlName="username">
-    </mat-form-field>
-    <mat-form-field class="full-width">
-      <mat-label>{{ 'auth.password' | translate }}</mat-label>
-      <input matInput id="password" formControlName="password" [type]="hide() ? 'password' : 'text'"/>
-      <button
-        matIconButton
-        matSuffix
-        (click)="clickEvent($event)"
-        [attr.aria-label]="'Hide password'"
-        [attr.aria-pressed]="hide()"
-      >
-        <mat-icon>{{ hide() ? 'visibility_off' : 'visibility' }}</mat-icon>
-      </button>
-    </mat-form-field>
-    <p>
-      {{ 'auth.no_account' | translate }} <a routerLink="/signup">{{ 'auth.here' | translate }}</a>!
-    </p>
-    <button matButton="filled" type="submit">{{ 'auth.login' | translate }}</button>
+  <div class="center">
+    <div class="form-container">
+      <mat-form-field class="full-width">
+        <mat-label>{{ 'auth.username' | translate }}</mat-label>
+        <input matInput id="username" formControlName="username">
+      </mat-form-field>
+      <mat-form-field class="full-width">
+        <mat-label>{{ 'auth.password' | translate }}</mat-label>
+        <input matInput id="password" formControlName="password" [type]="hide() ? 'password' : 'text'"/>
+        <button
+          matIconButton
+          matSuffix
+          (click)="clickEvent($event)"
+          type="button"
+          [attr.aria-label]="'Hide password'"
+          [attr.aria-pressed]="hide()"
+        >
+          <mat-icon>{{ hide() ? 'visibility_off' : 'visibility' }}</mat-icon>
+        </button>
+      </mat-form-field>
+      <p class="full-width centering">
+        {{ 'auth.no_account' | translate }} <a routerLink="/signup">{{ 'auth.here' | translate }}</a>!
+      </p>
+      <button matButton="filled" type="submit">{{ 'auth.login' | translate }}</button>
+    </div>
   </div>
 </form>
