--- a/indexcards-ui/src/styles.css
+++ b/indexcards-ui/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+.full-width {
+  width: 100%;
+}
+
+.centering {
+  text-align: center;
+}
+
+.form-container {
+  margin-top: 50px;
+  padding: 10px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  border: solid 3px var(--mat-sys-primary-container);
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+.full-width {
+  width: 100%;
+}
