--- a/indexcards-ui/src/styles.css
+++ b/indexcards-ui/src/styles.css
@@ -1,10 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
 .full-width {
   width: 100%;
 }
 
 .centering {
   text-align: center;
+}
+
+.pointer {
+  cursor: pointer;
 }
 
 .form-container {
@@ -23,6 +26,29 @@
   justify-content: center;
 }
 
-.full-width {
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
   width: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  width: 80%;
+}
+
+
+/* Responsive design */
+@media (max-width: 1024px) {
+  .form-container {
+    width: 90%;
+  }
+
+  .container {
+    width: 95%;
+  }
 }
