feat: project and create project page

--- a/indexcards-ui/src/app/pages/project/all-projects/all-projects.html
+++ b/indexcards-ui/src/app/pages/project/all-projects/all-projects.html
@@ -4,7 +4,7 @@
       <h1 class="title">
         {{ 'project.your_projects' | translate }}
       </h1>
-      <button matFab extended routerLink="/createProject">
+      <button matFab extended routerLink="/project/create">
         <mat-icon>add</mat-icon>
         {{ 'project.create_project_button' | translate }}
       </button>
